# diffusers-mps-notes

./: .gitignore  README.md  pyproject.toml
notes/: StableDiffusionで生成した画像から3DモデルをAIで作成し、キャラクターを動かす.ipynb
